refactor: spring updates