@@ -11,8 +11,24 @@ public class ItemNotFoundExcepion extends RuntimeException {
     private long id;
 
     public ItemNotFoundExcepion(long id, String classe) {
-        super(String.format("%s com id %d não foi encontrado.", classe, id));
+        super("%s com id %d não foi encontrado.".formatted(classe, id));
         this.classeName = classe;
         this.id = id;
+    }
+
+    public long getId() {
+        return id;
+    }
+
+    public void setId(long id) {
+        this.id = id;
+    }
+
+    public String getClasseName() {
+        return classeName;
+    }
+
+    public void setClasseName(String classeName) {
+        this.classeName = classeName;
     }
 }
